Add schedulability test and le pase la escoba

--- a/proyecto-2/Makefile
+++ b/proyecto-2/Makefile
@@ -1,5 +1,5 @@
 documentation: txt_modification.c
-	gcc `pkg-config --cflags gtk+-3.0` gui.c gabrielPlusMoraga.c -o scheduler `pkg-config --libs gtk+-3.0`
+	gcc `pkg-config --cflags gtk+-3.0` gui.c scheduler.c schedulability_tests.c -o scheduler `pkg-config --libs gtk+-3.0` -lm
 
 clean:
-	$(RM) documentation
+	$(RM) scheduler
